--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "pg": "^7.8.0",
     "sequelize": "^4.42.0",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0"
   }
 }
